--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "clsx": "^2.1.0",
+        "date-fns": "^3.6.0",
         "formik": "^2.4.5",
         "framer-motion": "^11.1.7",
         "react": "^18.2.0",
