--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 VITE_API_URL_LOCAL = http://localhost/laravel/point-of-sale-api/
-# VITE_API_URL_LOCAL = https://api.travelbfm.com/
-VITE_API_URL = https://api.travelbfm.com/
+VITE_API_URL = https://sell-api.ideasoft.one/
